Fixed the Edit Phase component, fixed wrong id property name for new phases, fixed empy phases shrinking too much

--- a/src/components/pages/Workout/CreateWorkout/CreateWorkout.module.css
+++ b/src/components/pages/Workout/CreateWorkout/CreateWorkout.module.css
@@ -4,7 +4,7 @@
     padding: 10px;
     display: grid;
     align-items: center;
-    grid-template-rows: 60px 1fr 50px 1fr;
+    grid-template-rows: 60px 1fr;
     gap: 15px;
     position: relative;
 }
@@ -53,6 +53,7 @@
     flex-direction: column;
     gap: 10px;
     height: 100%;
+    flex-grow: 1;
 }
 .addTagButton{
     width: 100%;
