--- a/src/components/pages/Workout/CreateWorkout/Phases/Phases.module.css
+++ b/src/components/pages/Workout/CreateWorkout/Phases/Phases.module.css
@@ -1,6 +1,6 @@
 .phases{
     width: 100%;
-    max-height: 40vh;
+    min-height: 0;
     display: grid;
     grid-template-rows: 40px 1fr;
     align-items: center;
@@ -9,6 +9,7 @@
     border-radius: 5px;
     z-index: 10;
     overflow: hidden;
+    flex-grow: 1;
 }
 .phaseList{
     display: grid;
